# polaris

./: README.md  YAWT_Documentacao_Completa.md  package-lock.json  package.json  setup.sh  teste.vcd  vite.config.js
examples/: ProcDTW_tb.vcd  basic.vcd  proc_fft_tb_complex.vcd  trad_cmm.txt  trad_opcode.txt
src/: index.html  splash.html
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  default.json.txt
src-tauri/src/: commands.rs  file_system.rs  lib.rs  main.rs  terminal.rs
src/scripts/: commandPalette.js  editor.js  fileTree.js  keyboard.js  layout.js  main.js  monaco.js  processorHub.js  project.js  settings.js  sidebarResizer.js  splitEditor.js  state.js  tabs.js  terminal.js  tooltip.js  wavetrace.js
src/styles/: command-palette.css  editor.css  fileTree.css  glassmorphism.css  main.css  modal.css  polaris.css  processorHub.css  tabs.css  terminal.css  wavetrace.css
